--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display:flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -27,6 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding: 0 8px;
 }
 
 button {
@@ -45,4 +49,24 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.links {
+  padding: 0 8px;
+  display:flex;
+  gap: 16px;
+}
+
+.rheader {
+  display:flex;
+  justify-content: flex-end;
+  flex: 1;
+}
+
+.notifications {
+  margin: auto 8px;
+}
+
+.profile-image {
+  margin: auto 8px;
 }
