--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -24,3 +26,18 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.display {
+  display:flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.info {
+  display: flex;
+  justify-content:center;
+  text-align: center;
+  flex-wrap:wrap;
+  width: 200px;
+}
+
