--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display:flex;
 }
 
 .icon {
@@ -66,4 +68,28 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-weight:bold;
+  font-size:large;
+}
+
+.top {
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.content{
+  margin-left:16px;
+  display:flex;
+  flex-direction:column;
+  gap: 16px;
+  flex:1;
+}
+
+.buttons{
+  display:flex;
+  gap:4px;
 }
